[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'dex-pallet'
version = '2.0.0-rc5'
repository = 'https://github.com/substrate-developer-hub/substrate-pallet-template/'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.1'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'cumulus-branch'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'cumulus-branch'

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'cumulus-branch'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'cumulus-branch'

[dependencies.generic-asset]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-generic-asset'
branch = 'cumulus-branch'


[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'cumulus-branch'


[dependencies.sp-std]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
branch = 'cumulus-branch'


[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'generic-asset/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'sp-runtime/std',
]
